# matchmypitch

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  agents.py  config.py  database.py  logging_config.py  main.py  models.py
frontend/: tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/deal/: page.tsx
frontend/app/investor/: page.tsx
frontend/app/investors/: page.tsx
frontend/app/pitch/: page.tsx
frontend/components/: navigation.tsx  plasma-background.tsx
frontend/components/dashboard/: ai-suggestions.tsx  metrics-cards.tsx  pitch-summary.tsx  pitch-upload.tsx
frontend/components/deal/: acceptance-meter.tsx  deal-sliders.tsx  term-sheet.tsx
frontend/components/investors/: investor-card.tsx  investor-fit-meter.tsx  investor-scene.tsx
frontend/components/pitch/: qa-timeline.tsx  transcript-panel.tsx  voice-input.tsx
scripts/: __init__.py  init_db.py
tests/: __init__.py  test_agents.py  test_models.py  test_routing.py  test_webhook.py
