[tool.poetry]
name = "matchmaking-backend"
version = "0.1.0"
description = "AI-powered matchmaking backend for startups and investors"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
clickhouse-connect = "^0.7.0"
strands-agents = "^0.1.0"
python-json-logger = "^2.0.7"
httpx = "^0.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
hypothesis = "^6.92.0"
black = "^23.12.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "property_test: marks tests as property-based tests",
]
